<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:background="@drawable/bg_dialog_dots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <minhson.com.fakemessenger.fonts.TextViewRobotoThin
            android:id="@+id/tv_edit_contact"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/edit_contact"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/nhat"/>

        <minhson.com.fakemessenger.fonts.TextViewRobotoThin
            android:id="@+id/tv_delete_contact"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/delete_contact"
            android:textSize="20dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/nhat"/>

        <!--<minhson.com.fakemessenger.fonts.TextViewRobotoThin-->
            <!--android:id="@+id/tv_color"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="60dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/color"-->
            <!--android:textSize="20dp" />-->
        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0.5dp"-->
            <!--android:background="@color/nhat"/>-->

        <minhson.com.fakemessenger.fonts.TextViewRobotoThin
            android:id="@+id/tv_clear_chat"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/clear"
            android:textSize="20dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/nhat"/>

        <minhson.com.fakemessenger.fonts.TextViewRobotoThin
            android:id="@+id/tv_tutorial"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/tutorial"
            android:textSize="20dp" />

    </LinearLayout>

</LinearLayout>