<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/xam">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <minhson.com.fakemessenger.fonts.TextViewConden
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center|bottom"
                    android:text="@string/double_click"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_enter_name"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/enter_name"
                    android:textColor="#444"
                    android:textSize="14dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_messenger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="invisible"
                        android:layout_marginLeft="35dp"
                        android:gravity="center|right"
                        android:text="@string/messenger"
                        android:textSize="16sp" />

                    <minhson.com.fakemessenger.fonts.TextViewConden
                        android:id="@+id/tv_create"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="@string/create"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_user"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_gravity="center|left"
                android:layout_marginRight="35dp"
                android:src="@drawable/icon_user_default" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>